syntax = "proto3";

package omega;

option go_package = "github.com/omega-cyber/mesh-network/gen/proto/go/alert";

service AlertService {
  rpc SendAlert (AlertRequest) returns (AlertResponse);
}

message AlertRequest {
  string agent_id = 1;
  string threat_type = 2;
  string description = 3;
  int64 timestamp = 4;
  map<string, string> metadata = 5;
}

message AlertResponse {
  bool success = 1;
  string message = 2;
  string alert_id = 3;
}
